# talentKru-server

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database_setup_guide.md  docker-compose.yml  pyproject.toml  setup.md  tasks.py
.kiro/specs/ai-agents/: .config.kiro  design.md  requirements.md
.kiro/specs/candidate-lifecycle/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/identity-and-access/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/interview-workflow/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/platform-foundation/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/reporting-and-i18n/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/talentkru-server/: .config.kiro  requirements.md
.kiro/steering/: PYTHON_EXECUTION_GUIDE.md  TESTING_GUIDE.md  UV_MIGRATION_SUMMARY.md  documentation.md  product.md  structure.md  tech.md  test.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_identity_and_access.py  003_seed_roles_and_privileges.py  004_add_rate_limit_to_organizations.py  005_add_audit_log_table.py  006_add_candidate_lifecycle_tables.py  007_add_enum_types.py  008_add_interview_journeys_table.py  009_add_description_to_job_postings.py  010_add_interview_workflow_tables.py
app/: audit.py  audit_models.py  base_model.py  config.py  crypto.py  database.py  decorators.py  dependencies.py  email_service.py  main.py  openapi_utils.py  service_base.py  shard_router.py
app/domain_events/: handlers.py  models.py  publisher.py  retry.py
app/middleware/: auth.py  auth_extraction.py  cors.py  rate_limit.py  versioning.py
app/modules/agents/: router.py
app/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
app/modules/availability/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/candidates/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/email_config/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/feedback/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/interviews/: models.py  router.py  service.py
app/modules/invitations/: models.py  router.py  schemas.py  service.py
app/modules/job_posting/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/job_profile/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/journeys/: models.py  router.py  schemas.py  service.py
app/modules/matching/: router.py  service.py
app/modules/notifications/: __init__.py  email_delivery.py  models.py  router.py  scheduler.py  schemas.py  service.py
app/modules/observability/: router.py
app/modules/organizations/: models.py  router.py  schemas.py  service.py
app/modules/password_reset/: models.py  router.py  schemas.py  service.py
app/modules/portal/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/privacy/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/questionnaires/: models.py  router.py  schemas.py  service.py
app/modules/rbac/: models.py  router.py  schemas.py  service.py
app/modules/reporting/: models.py  router.py  service.py
app/modules/requisitions/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/resumes/: __init__.py  models.py  router.py  schemas.py  service.py  storage.py
app/observability/: logging.py  metrics.py  middleware.py  tracing.py
database/: create_user.sql
db-scripts/: SAMPLE_DATA_README.md  cleanup_sample_data.sql  create_kru_app_db.sql  create_kru_test_db.sql  create_sample_data.sql  create_user.sql
docs/: Identity_and_access_guide.md
scripts/: remove-postgres.sh  start-postgres.sh  stop-postgres.sh
specs/: Kru-server-spec.md
tests/: conftest.py  integration_fixtures.py  test_audit_log.py  test_auth_properties.py  test_auth_service.py  test_candidate_lifecycle_integration.py  test_candidate_minimal.py  test_candidate_service.py  test_candidate_service_simple.py  test_crypto.py  test_dependencies.py  test_domain_events_retry.py  test_dsar_integration.py  test_email_config_service.py  test_email_delivery_service.py  test_health.py  test_impersonate.py  test_impersonate_router.py  test_interview_journey_service.py  test_interview_slots_service.py  test_interview_workflow_smoke.py  test_invitation_service.py  test_job_posting_integration.py  test_job_posting_service.py  test_login_router.py  test_middleware_auth.py  test_notification_service.py  test_organizations.py  test_password_reset_service.py  test_portal_dsar.py  test_portal_service.py  test_privacy_service.py  test_questionnaire_service.py  test_rate_limit_middleware.py  test_rate_limiting.py  test_rbac_service.py  test_requisition_integration.py  test_resume_ingestion_service.py  test_resume_models.py  test_scheduler_integration.py  (+14 more)
(+25 files in other folders)
