[project]
name = "talentkru-server"
version = "0.1.0"
description = "TalentKru.ai FastAPI backend"
readme = "README.md"
authors = [{name = "TalentKru Team", email = "team@talentkru.ai"}]
requires-python = ">=3.12.13"

[tool.poetry]
name = "talentkru-server"
version = "0.1.0"
description = "TalentKru.ai FastAPI backend"
readme = "README.md"
authors = ["TalentKru Team <team@talentkru.ai>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12.13"
fastapi = "0.115.5"
uvicorn = {version = "0.34.2", extras = ["standard"]}
sqlalchemy = {version = "2.0.40", extras = ["asyncio"]}
asyncpg = "0.31.0"
alembic = "1.18.4"
pydantic-settings = "2.6.1"
pydantic = {version = "2.7.0", extras = ["email"]}
structlog = "24.4.0"
prometheus-client = "0.21.1"
opentelemetry-sdk = "1.41.0"
opentelemetry-instrumentation-fastapi = "0.62b0"
boto3 = "1.42.25"
cryptography = "43.0.0"
greenlet = ">=3.5.1,<4.0.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.1.0"
PyJWT = "^2.8.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "6.119.3"
pytest = "8.3.4"
pytest-asyncio = "0.24.0"
httpx = "0.28.0"
pytest-cov = "6.0.0"
invoke = ">=3.0.3,<4.0.0"
ruff = "^0.5.0"
mypy = "^1.11.0"
pytest-watch = "^4.2.0"
aiosqlite = "^0.22.0"
python-multipart = "^0.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
